2010-05-20 Raúl Mateos <raulofpandora@gmail.com>

	* godmode/alerts/alert_list.php: Added code to show different
	header depending on GET parameter.

	* godmode/alerts/alert_list_builder.php: Changed final icon.

	* godmode/agentes/planned_downtime.php: Center some icons. Now table
	header is shown only if there are planned downtimes.

2010-05-20  Ramon Novoa  <rnovoa@artica.es>

	* DEBIAN/control, DEBIAN/make_deb_package.sh,
	  include/config_process.php, pandora_console.spec: Updated for the
	  release of Pandora FMS 3.1 RC1.

2010-05-20 Raúl Mateos <raulofpandora@gmail.com>

	* operation/users/user_edit.php: Updated year. Use better table in group
	list.

	* godmode/snmp_console/snmp_alert.php: Updated year. Removed old header.
	Added code to show different header depending on GET parameter.

2010-05-20  Miguel de Dios  <miguel.dedios@artica.es>

	* DEBIAN/make_deb_package.sh: fixed the permissions to DEBIAN temp package. 
	
2010-05-18  Miguel de Dios  <miguel.dedios@artica.es>

	* DEBIAN/make_deb_package.sh: added parameter to make only packages of
	pear modules or not.

2010-05-18  Miguel de Dios  <miguel.dedios@artica.es>

	* include/fgraph.php: fixed the fgraph when cron get a report in PDF for to
	send, and this situation the fgraph execute in localhost althought it'snt
	login.

2010-05-18  Sancho Lerena <slerena@artica.es>

	* pandoradb_data.sql: Update build/version to rc1.

	* extras/pandoradb_migrate_v3.0_to_v3.1.sql: Revised upgrade script.
	Tested with several 3.0 versions.

	* pandora_console_upgrade: Updated script, tested to work with 3.1

2010-05-18  Sergio Martin <sergio.martin@artica.es>

	* operation/agentes/ver_agente.php
	godmode/reporting/visual_console_builder.wizard.php
	godmode/reporting/visual_console_builder.php: Fixed the
	multiple agents selection on visual console wizard 
	for bug 2997750

2010-05-18  Miguel de Dios  <miguel.dedios@artica.es>

	* include/javascript/pandora.js: added function 